--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -13,3 +13,21 @@
         state: started
         ports:
           - "80:80"
+
+    - name: Copy sample config file
+      command: mv /var/www/html/wp-config-sample.php /var/www/html/wp-config.php
+
+    - name: Update Wordpress config file
+      lineinfile:
+        path: /var/www/html/wp-config.php
+        regexp: "{{item.regexp}}"
+        line: "{{item.line}}"
+      with_items:
+        - {'regexp': "define\\( 'DB_NAME', '(.)+' \\);", 'line': "define( 'DB_NAME', 'iteadb' );"}
+        - {'regexp': "define\\( 'DB_USER', '(.)+' \\);", 'line': "define( 'DB_USER', 'iteauser' );"}
+        - {'regexp': "define\\( 'DB_PASSWORD', '(.)+' \\);", 'line': "define( 'DB_PASSWORD', 'q1q1q1q1' );"}
+
+    - name: Restart Apache
+      service:
+        name: apache2
+        state: restarted
