edited deploy ansible

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -16,6 +16,7 @@
         ports:
           - "80:80"
         command: "mv /var/www/html/wp-config-sample.php /var/www/html/wp-config.php & service apache2 restart"
+        command: sleep infinity
 
 #    - name: Copy sample config file
 #      command: mv /var/www/html/wp-config-sample.php /var/www/html/wp-config.php
