--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -15,8 +15,9 @@
         restart: yes
         ports:
           - "80:80"
-        command: "mv /var/www/html/wp-config-sample.php /var/www/html/wp-config.php & service apache2 restart"
-        command: sleep infinity
+      
+    - name: In container
+      command: docker exec wordpress /bin/bash -c "mv /var/www/html/wp-config-sample.php /var/www/html/wp-config.php & service apache2 restart "
 
 #    - name: Copy sample config file
 #      command: mv /var/www/html/wp-config-sample.php /var/www/html/wp-config.php
