--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -17,7 +17,7 @@
           - "80:80"
       
     - name: In container
-      command: docker exec -d wordpress /bin/bash "mv /var/www/html/wp-config-sample.php /var/www/html/wp-config.php & service apache2 restart "
+      command: docker exec -d wordpress /bin/bash -c "cp /var/www/html/wp-config-sample.php /var/www/html/wp-config.php & service apache2 restart "
 
 #    - name: Copy sample config file
 #      command: mv /var/www/html/wp-config-sample.php /var/www/html/wp-config.php
