edited deploy ansible

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -16,10 +16,10 @@
         ports:
           - "80:80"
         env:
-          - WORDPRESS_DB_HOST=&db:3306
-          - WORDPRESS_DB_USER=iteauser
-          - WORDPRESS_DB_PASSWORD=q1q1q1q1
-          - WORDPRESS_DB_NAME=iteadb
+          WORDPRESS_DB_HOST: &db:3306
+          WORDPRESS_DB_USER: iteauser
+          WORDPRESS_DB_PASSWORD: q1q1q1q1
+          WORDPRESS_DB_NAME: iteadb
 
 #    - name: In container
 #      command: docker exec wordpress /bin/bash -c 'cp /var/www/html/wp-config-sample.php /var/www/html/wp-config.php'
