--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -16,7 +16,7 @@
         ports:
           - "80:80"
         env:
-          WORDPRESS_DB_HOST: &db:3306
+          WORDPRESS_DB_HOST: terraform-20210223082716228000000001.c3texek9fy5h.eu-central-1.rds.amazonaws.com
           WORDPRESS_DB_USER: iteauser
           WORDPRESS_DB_PASSWORD: q1q1q1q1
           WORDPRESS_DB_NAME: iteadb
