edited deploy ansible

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -43,6 +43,7 @@ jobs:
             db=$(cat terraform.log | grep -w rds_endpoint)
             db=$(grep "rds_endpoint" terraform.log | awk -F  ":" '{print $1}' )
             db=${db//'rds_endpoint = "'}
+            echo $db > ansible/db-address
 
       - name: Ansible
         uses: saubermacherag/ansible-playbook-docker-action@v1.3
