--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -2,6 +2,9 @@
   gather_facts: false
   hosts: [all]
   become: yes
+  include_vars:
+    file: db-address
+    name: db    
 
   tasks:
     - name: Create exam-iac-app2
@@ -15,7 +18,7 @@
         ports:
           - "80:80"
         env:
-          WORDPRESS_DB_HOST: terraform-20210223082716228000000001.c3texek9fy5h.eu-central-1.rds.amazonaws.com
+          WORDPRESS_DB_HOST: $db #terraform-20210223082716228000000001.c3texek9fy5h.eu-central-1.rds.amazonaws.com
           WORDPRESS_DB_USER: iteauser
           WORDPRESS_DB_PASSWORD: q1q1q1q1
           WORDPRESS_DB_NAME: iteadb
